--- a/deployments/stateful-set/stateful-set-deploy.yaml
+++ b/deployments/stateful-set/stateful-set-deploy.yaml
@@ -1,51 +1,53 @@
 apiVersion: v1
 kind: Service
 metadata: 
-  name: nginx-test
+  name: "nginx-test"
   labels: 
-    app: nginx-test 
+    app: "nginx-test"
 spec:
   ports:
-    - port: 80
-      name: web
-    clusterIP: None 
+  - port: 80
+    name: web
+  clusterIP: None 
   selector:
-    app: nginx-test 
+    app: "nginx-test"
 --- 
-
 apiVersion: apps/v1
 kind: StatefulSet
 metadata: 
   name: web
 spec:
+  updateStrategy: 
+    type: RollingUpdate
   selector:
     matchLabels:
-      app: nginx-test 
+      app: "nginx-test"
   serviceName: "nginx-test"
   replicas: 2
   minReadySeconds: 10
   template:
     metadata: 
       labels:
-        app: nginx-test
+        app: "nginx-test"
     spec: 
       terminationGracePeriodSeconds: 10 
       containers:
       - name: nginx
-        image: k8s.gcr.io/nginx-slim:0.8
+        image: "gcr.io/google_containers/nginx-slim:0.8"
         ports:
-          - contianerPort: 80
+          - containerPort: 80
             name: web
         volumeMounts:
           - name: www
             mountPath: /usr/share/nginx/html 
-    volumeClainTemplates:
-    - metadata:
+  volumeClaimTemplates:
+  - metadata:
       name: www
-      spec: 
-        storageClassName: apollo-sc
-        resources:
-          requests:
-            storage: 1Gi 
+    spec: 
+      accessModes: [ "ReadWriteOnce" ]
+      storageClassName: apollo-sc
+      resources:
+        requests:
+          storage: 1Gi 
 
 
