--- a/failing-pvc-deployment/templates/pvc-example.yaml
+++ b/failing-pvc-deployment/templates/pvc-example.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: mypvc
+  name: test-pvc-{{ .Release.Name }}
 spec:
-  storageClassName: hostpath
+  storageClassName: {{ .Values.global.sc-name }}
   resources:
     requests:
       storage: 5M
