--- a/failing-pvc-deployment/templates/deployment-with-pvc.yaml
+++ b/failing-pvc-deployment/templates/deployment-with-pvc.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   replicas: 1
   strategy:
-    type: Recreate 
+    type: Recreate
   selector:
     matchLabels:
       app: test-dep-{{ .Release.Name }}
@@ -15,6 +15,8 @@ spec:
       labels:
         app: test-dep-{{ .Release.Name }}
     spec:
+      nodeSelector:
+        agentpool: agentpool
       containers:
       - name: test-dep-{{ .Release.Name }}
         image: nginx:latest
