--- a/security_context/sec-context-with-pvc.yaml
+++ b/security_context/sec-context-with-pvc.yaml
@@ -1,10 +1,10 @@
-kind: StorageClass
-apiVersion: storage.k8s.io/v1
-metadata: 
-  name: host-path-reclaim
-provisioner: docker.io/hostpath
-reclaimPolicy: Retain
-volumeBindingMode: WaitForFirstConsumer 
+# kind: StorageClass
+# apiVersion: storage.k8s.io/v1
+# metadata: 
+#   name: host-path-reclaim
+# provisioner: docker.io/hostpath
+# reclaimPolicy: Retain
+# volumeBindingMode: WaitForFirstConsumer 
 
 ---
 apiVersion: apps/v1
@@ -53,4 +53,4 @@ spec:
       storage: 100M
   accessModes:
     - ReadWriteMany
-  storageClassName: host-path-reclaim
+  storageClassName: hostpath
