--- a/deployments/httpbin/httpbin.yaml
+++ b/deployments/httpbin/httpbin.yaml
@@ -1,3 +1,13 @@
+apiVersion: v1
+kind: Secret
+metadata:
+  name: my-env-secret
+type: Opaque
+data:
+  var1: YWE=
+  var2: YmI=
+  var3: c2Rm
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -18,6 +28,15 @@ spec:
           limits:
             memory: "128Mi"
             cpu: "500m"
+        envFrom:
+        - secretRef:
+            name: my-env-secret
+        env:
+          - name: BETTER_NAME # if you put name of the env variable like better-name it will not be picked up by the shell
+            valueFrom:
+              secretKeyRef:
+                name: my-env-secret
+                key: var1
         ports:
         - containerPort: 80
 ---
@@ -33,25 +52,25 @@ spec:
     port: 8000
     targetPort: 80
 ---
-apiVersion: networking.k8s.io/v1
-kind: Ingress
-metadata:
-  name: httpbin-cert-test
-spec:
-  ingressClassName: nginx
-  tls:
-  - hosts:
-    - TODO
-    secretName: TODO
-  rules:
-  - host: TODO
-    http:
-      paths:
-        - path: /
-          pathType: Prefix
-          backend: 
-            service:
-              name: httpbin-svc
-              port:
-                name: http 
-    
+# apiVersion: networking.k8s.io/v1
+# kind: Ingress
+# metadata:
+#   name: httpbin-cert-test
+# spec:
+#   ingressClassName: nginx
+#   tls:
+#   - hosts:
+#     - TODO
+#     secretName: TODO
+#   rules:
+#   - host: TODO
+#     http:
+#       paths:
+#         - path: /
+#           pathType: Prefix
+#           backend:
+#             service:
+#               name: httpbin-svc
+#               port:
+#                 name: http
+
