--- a/.github/workflows/mvc-app-build.yml
+++ b/.github/workflows/mvc-app-build.yml
@@ -1,7 +1,10 @@
 # This workflow will build a .NET project
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-net
 
-name: .NET
+name: build mvc-app
+defaults:
+  run:
+    shell: bash
 
 on:
   push:
@@ -11,9 +14,10 @@ on:
 
 jobs:
   build:
-
+    defaults:
+      run:
+        working-directory: ./dotnet/mvc-app
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v4
     - name: Setup .NET
@@ -22,6 +26,7 @@ jobs:
         dotnet-version: 8.0.x
     - name: Restore dependencies
       run: dotnet restore
+
     - name: Build
       run: dotnet build --no-restore
     - name: Test
