--- a/.github/workflows/mvc-app-build.yml
+++ b/.github/workflows/mvc-app-build.yml
@@ -34,10 +34,10 @@ jobs:
       run: dotnet publish --output /app-publish --configuration Release --no-restore
       working-directory: ./dotnet/mvc-app
     - name: Upload artifacts
-      uses: actions/upload-artifact
+      uses: actions/upload-artifact@v4
       with:
-          name: app-published
-          path: ./app-publish
+        name: app-published
+        path: ./app-publish
 
 
 
