--- a/.github/workflows/mvc-app-build.yml
+++ b/.github/workflows/mvc-app-build.yml
@@ -8,6 +8,8 @@ defaults:
 
 on:
   workflow_dispatch: {}
+  push:
+    branches: [ $default-branch ]
 
 jobs:
   build:
@@ -24,6 +26,13 @@ jobs:
       uses: actions/setup-dotnet@v4.0.1
       with:
         dotnet-version: 8.0.x
+    - name: Set up dependency caching for faster builds
+      uses: actions/cache@v3
+      with:
+        path: ~/.nuget/packages
+        key: ${{ runner.os }}-nuget-${{ hashFiles('**/packages.lock.json') }}
+        restore-keys: |
+          ${{ runner.os }}-nuget-
     - name: Restore dependencies
       run: dotnet restore
       working-directory: ./dotnet/mvc-app
