--- a/.github/workflows/mvc-app-build.yml
+++ b/.github/workflows/mvc-app-build.yml
@@ -16,7 +16,8 @@ on:
   push:
     branches: [ $default-branch ]
   pull_request:
-      branches: [ $default-branch ]
+      branches:
+        - main
 
 jobs:
   build:
