--- a/.github/workflows/mvc-app-deploy-azure.yml
+++ b/.github/workflows/mvc-app-deploy-azure.yml
@@ -95,11 +95,13 @@ jobs:
         failOnStdErr: false
         scope: resourcegroup
 
-    # Publish website to Azure App Service using CLI (WebApp)
+    - name: ZIP artifacts
+      run: |
+        cd ./app-publish
+        zip -r ../app.zip .
+
     - name: Publish Website to WebApp
       uses: Azure/cli@v2
       with:
         inlineScript: |
-             cd ./app-publish
-             zip -r ../app.zip .
              az webapp deploy --name ${{ env.APP_NAME }} --resource-group ${{ env.RG_NAME }} --src-path ./app.zip --type zip
