--- a/.github/workflows/mvc-app-build-tmpl.yml
+++ b/.github/workflows/mvc-app-build-tmpl.yml
@@ -46,6 +46,12 @@ jobs:
     - name: Publish
       run: dotnet publish --output $GITHUB_WORKSPACE/app-publish --configuration Release --no-restore
       working-directory: ./dotnet/mvc-app
+    - name: Log in to the Container registry
+      uses: docker/login-action@v3
+      with:
+        registry: https://ghcr.io
+        username: ${{ github.actor }}
+        password: ${{ secrets.GITHUB_TOKEN }}
 # https://docs.github.com/en/packages/working-with-a-github-packages-registry/working-with-the-container-registry#labelling-container-images
     - name: Docker build
       if: ${{ inputs.dockerBuildEnabled }}
@@ -58,6 +64,8 @@ jobs:
     - name: Docker push
       if: ${{ inputs.dockerBuildEnabled }}
       run: docker push ${{ env.FULL_IMAGE_NAME}}
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     - name: Upload artifacts
       uses: actions/upload-artifact@v4
       with:
